add response classes and api controllers owner and pettype

--- a/MyVet.Web/MyVet.Web.csproj
+++ b/MyVet.Web/MyVet.Web.csproj
@@ -27,4 +27,8 @@
     <Folder Include="wwwroot\images\Pets\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyVet.Common\MyVet.Common.csproj" />
+  </ItemGroup>
+
 </Project>
