--- a/MyVet.Web/appsettings.json
+++ b/MyVet.Web/appsettings.json
@@ -7,5 +7,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MyVet;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
+  "Tokens": {
+    "Key": "asdfghjikbnvcgdfirtkghhdfñhjmdfuf5694@()$fdsrtfdfkf$heryvgfxdgc",
+    "Issuer": "localhost",
+    "Audience": "users"
   }
 }
