--- a/MyVet.Prism/MyVet.Prism.iOS/MyVet.Prism.iOS.csproj
+++ b/MyVet.Prism/MyVet.Prism.iOS/MyVet.Prism.iOS.csproj
@@ -204,5 +204,17 @@
   <ItemGroup>
     <BundleResource Include="Resources\ic_chevron_right.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_list.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_pet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\logoVet2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\LogoVet.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
