--- a/MyVet.Prism/MyVet.Prism.Android/MyVet.Prism.Android.csproj
+++ b/MyVet.Prism/MyVet.Prism.Android/MyVet.Prism.Android.csproj
@@ -102,5 +102,17 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ic_chevron_right.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_pet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_list.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\logoVet2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\LogoVet.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
