Register user with email confirmation, change pass

--- a/MyVet.Prism/MyVet.Prism.iOS/MyVet.Prism.iOS.csproj
+++ b/MyVet.Prism/MyVet.Prism.iOS/MyVet.Prism.iOS.csproj
@@ -198,8 +198,10 @@
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.4.11.982</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
     <PackageReference Include="Prism.DryIoc.Forms" Version="7.2.0.1367" />
+    <PackageReference Include="Xamarin.Forms">
+      <Version>4.2.0.709249</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyVet.Prism\MyVet.Prism.csproj">
