--- a/MyVet.Web/appsettings.json
+++ b/MyVet.Web/appsettings.json
@@ -12,5 +12,12 @@
     "Key": "asdfghjikbnvcgdfirtkghhdfñhjmdfuf5694@()$fdsrtfdfkf$heryvgfxdgc",
     "Issuer": "localhost",
     "Audience": "users"
+  },
+  "Mail": {
+    "From": "diana.russiposada@gmail.com",
+    "Smtp": "smtp.gmail.com",
+    "Port": 587,
+    "Password": "Knenita1020"
   }
+
 }
