data table in all controllers and icons

--- a/MyVet.Web/Properties/launchSettings.json
+++ b/MyVet.Web/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": true,
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:3208",
-      "sslPort": 44397
+      "applicationUrl": "https://localhost:44360",
+      "sslPort": 44360
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "MyVet.Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
