Fixes in dates and add pett controller and modify views

--- a/MyVet.Web/appsettings.json
+++ b/MyVet.Web/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MyVet;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=LAPTOP-0IIQP4JH\\SQLEXPRESS;Database=MyVet;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Tokens": {
     "Key": "asdfghjikbnvcgdfirtkghhdfñhjmdfuf5694@()$fdsrtfdfkf$heryvgfxdgc",
