edit button on pet

--- a/MyVet.Prism/MyVet.Prism.iOS/MyVet.Prism.iOS.csproj
+++ b/MyVet.Prism/MyVet.Prism.iOS/MyVet.Prism.iOS.csproj
@@ -228,5 +228,11 @@
   <ItemGroup>
     <BundleResource Include="Resources\ic_pets_menu.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_action_add_circle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\NOIMAGE.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
