--- a/MyVet.Prism/MyVet.Prism.Android/MyVet.Prism.Android.csproj
+++ b/MyVet.Prism/MyVet.Prism.Android/MyVet.Prism.Android.csproj
@@ -272,5 +272,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\splash.jfif" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_action_add_circle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\noimage1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\noimage.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
